gc tweaking to avoid sound delays