@@ -1,15 +1,19 @@
 -client
 -Xms15m
--Xmx40m
+-Xmx45m
 -XX:+UnlockExperimentalVMOptions
--XX:+CMSClassUnloadingEnabled
 -XX:+TieredCompilation
 -XX:+AggressiveOpts
 -XX:+UseAdaptiveSizePolicy
--Dsun.java2d.noddraw=false
+-Dsun.java2d.noddraw=true
 -Dswing.aatext=true
 -XX:MaxHeapFreeRatio=10
 -XX:MinHeapFreeRatio=10
 -Dcom.apple.macos.useScreenMenuBar=true
 -Dcom.apple.mrj.application.apple.menu.about.name=Musique
 -Dcom.apple.macos.smallTabs=true
+-XX:MaxPermSize=25m
+-XX:NewRatio=4
+-XX:+UseAdaptiveGCBoundary
+-XX:+UseConcMarkSweepGC
+-XX:+CMSIncrementalMode
